# proyecto4geeks

./: .gitignore  ARQUITECTURE.md  folders.txt  ideas.txt  pyproject.toml  requirements.txt
documents/: data.txt  folders.csv  ideas.csv
notebooks/: 01_eda.ipynb
